--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-button": "^1.2.1",
     "react-dom": "^18.2.0",
     "react-form": "^4.0.1",
+    "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
