--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.5",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
