--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap-icons": "^1.10.2",
     "react-bootstrap-modal": "^4.2.0",
     "react-button": "^1.2.1",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-form": "^4.0.1",
     "react-hot-toast": "^2.4.0",
